--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Afiq QR Code Generator</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
-    <h1>Afiq QR Code Generator</h1>
-    <p>Ketik tautan/link yang ingin dibuat QR Code:</p>
-    <input type="text" id="tautanQR" placeholder="Ketik tautan/link di sini" />
-    <p>Ketik nama file QR Code:</p>
-    <input type="text" id="namaFileQR" placeholder="Ketik nama file di sini" />
-    (default: afiqQRCode.png)
-    <p>Ketik deskripsi untuk diletakkan di bawah gambar:</p>
-    <input type="text" id="deskripsiQR" placeholder="Ketik deskripsi di sini" />
-    (maks 30 karakter, default: tanpa teks)
-    <p><button id="kirimBtn">Kirim</button></p>
+
+  <body class="gradient-background">
+
+    <div class="container py-5">
+      <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+          <h1 class="mb-4">Afiq QR Code Generator</h1>
+        </div>
+      </div>
+    </div>
+
+    <div class="container py-5">
+      <div class="grid-container">
+        <!-- Row 1 -->
+        <p>Ketik tautan/link yang ingin dibuat QR Code:</p>
+        <p>
+          <input type="text" id="tautanQR" placeholder="Ketik tautan di sini" />
+          (wajib diisi)
+        </p>
+        <div class="qr-preview">
+          <img id="contohQR" src="./contohQR.png" alt="QR Code Preview" />
+        </div>
+
+        <!-- Row 2 -->
+        <p>Ketik nama file QR Code:</p>
+        <p>
+          <input
+            type="text"
+            id="namaFileQR"
+            placeholder="Ketik nama file di sini"
+          />
+          (tidak perlu tulis ".png", opsional)
+        </p>
+
+        <!-- Row 3 -->
+        <p>Ketik deskripsi untuk diletakkan di bawah gambar:</p>
+        <p>
+          <input
+            type="text"
+            id="deskripsiQR"
+            placeholder="Ketik deskripsi di sini"
+          />
+          (maks 30 karakter, opsional)
+        </p>
+      </div>
+
+      <div class="mt-5">
+        <button id="kirimBtn" class="btn btn-primary shadow px-4">Buat</button>
+      </div>
+    </div>
 
     <script src="./index.js"></script>
   </body>
